syntax = "proto3";

package onepiece;

option go_package = "grpc-server/proto";

// Servicio que ofrece el Submundo para COMPRAR piratas capturados

service SubmundoService {
  rpc ComprarPirata(PirataCapturado) returns (ResultadoCompra);
}

service GobiernoService {
  rpc ObtenerListaPiratas (SolicitudLista) returns (ListaPiratas);
  rpc ReportarCaptura (ReporteCaptura) returns (ConfirmacionCaptura);
}

service MarinaService {
  rpc ComprarPirata(PirataCapturado) returns (ResultadoCompra);
}

// Informaci√≥n del pirata ofrecido por el cazarrecompensas
message PirataCapturado {
  string id = 1;
  string nombre = 2;
  int32 recompensa = 3;
  string cazarrecompensas_id = 4;
  string peligrosidad = 5;
}

// Resultado de la compra
message ResultadoCompra {
  string nombre = 1;
  string estado = 2;
  string caso = 3; 
  int32 monto_pagado = 4;      // Solo relevante si estado = EXITO
  string mensaje = 5;
  string entrega = 6;     // submundo o marina
}

// Mensajes para el Gobierno
message SolicitudLista {
  string cazarrecompensa_id = 1;
}

message PirataInfo {
  string id = 1;
  string nombre = 2;
  uint64 recompensa = 3;
  string peligrosidad = 4;
  string estado = 5; // "Buscado" o "Capturado"
}

message ListaPiratas {
  repeated PirataInfo piratas = 1;
}

message ReporteCaptura {
  string cazarrecompensa_id = 1;
  string pirata_id = 2;
  string estado = 3;
  string caso = 4;
  string entrega = 5;
}

message ConfirmacionCaptura {
  bool exito = 1;
  string mensaje = 2;
}
